test fix jumpy height on mobile

--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -1,5 +1,6 @@
 main {
   height: 100vh;
+  display: block;
   background: url(bg.jpg) no-repeat center/cover;
   background-attachment: fixed;
   position: relative;
